--- a/package.json
+++ b/package.json
@@ -1,8 +1,26 @@
 {
-  "dependencies": {
-    "inquirer": "^8.2.0"
+  "name": "teamprofilecreator",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "jest"
   },
-    "scripts": {
-      "test": "jest"
-    }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mlbarre/teamprofilecreator.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mlbarre/teamprofilecreator/issues"
+  },
+  "homepage": "https://github.com/mlbarre/teamprofilecreator#readme",
+  "dependencies": {
+    "inquirer": "^8.2.0",
+    "jest": "^27.4.7"
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "description": ""
 }
