--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "teamprofilecreator",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "jest"
   },
